overflow fixes

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -5,10 +5,8 @@
   height: 100%;
   background-color: #000;
   mask-image: url('/static/img/logo.svg');
-  mask-size: 70%;
+  mask-size: 65%;
   mask-position: center;
   mask-repeat: no-repeat;
-  mask-type: luminance;
-  overflow: hidden;
 }
 
